# yummyanime-sdk

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: .gitignore  node_modules  package-lock.json  package.json
.sdk/def/: yummyanime_0.1.0.json
.sdk/model/: config.aontu  sdk.aontu  sdk.json  sdk.jsonic
.sdk/test/: test.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  yummyanime.go
go-cli/: .gitignore  Makefile  README.md  go.mod  go.sum  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
go/core/: config.go  context.go  error.go  helpers.go  operation.go  registry.go  response.go  result.go  target.go  yummyanime_sdk.go
go/entity/: anime_entity.go  types.go
go/feature/: audit_feature.go  base_feature.go  cache_feature.go  clienttrack_feature.go  debug_feature.go  idempotency_feature.go  log_feature.go  metrics_feature.go  netsim_feature.go  paging_feature.go  proxy_feature.go  ratelimit_feature.go  rbac_feature.go  retry_feature.go  streaming_feature.go  telemetry_feature.go  test_feature.go  timeout_feature.go
go/test/: anime_direct_test.go  anime_entity_test.go  custom_utility_test.go  exists_test.go  feature_test.go  netsim_test.go  pipeline_test.go  primary_utility_test.go  readme_examples_test.go  runner_test.go  struct_runner_test.go  struct_utility_test.go
go/utility/: clean.go  done.go  feature_add.go  feature_hook.go  feature_init.go  fetcher.go  make_context.go  make_error.go  make_fetch_def.go  make_options.go  make_point.go  make_request.go  make_response.go  (+17 more)
lua/: AGENTS.md  CLAUDE.md  LICENSE  README.md  REFERENCE.md  config.lua  features.lua  yummyanime.rockspec  yummyanime_sdk.lua  yummyanime_types.lua
php/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  composer.json  config.php  features.php  vendor  yummyanime_sdk.php
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  pyproject.toml  yummyanime_sdk.py  yummyanime_types.py
py/core/: context.py  control.py  error.py  helpers.py  operation.py  response.py  result.py  spec.py  utility_type.py
py/entity/: anime_entity.py
py/feature/: base_feature.py  clienttrack_feature.py  idempotency_feature.py  log_feature.py  netsim_feature.py  paging_feature.py  proxy_feature.py  ratelimit_feature.py  test_feature.py  timeout_feature.py
py/test/: runner.py  test_anime_direct.py  test_anime_entity.py  test_exists.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py
py/utility/: clean.py  feature_hook.py  feature_init.py  fetcher.py  make_error.py  make_request.py  make_response.py  make_result.py  make_url.py  prepare_headers.py  register.py  result_headers.py  transform_response.py
rb/: AGENTS.md  CLAUDE.md  LICENSE  README.md  REFERENCE.md  Yummyanime_sdk.gemspec  Yummyanime_sdk.rb  Yummyanime_types.rb  config.rb  features.rb
ts/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  node_modules  package.json
(+328 files in other folders)
